Fixed some broken css

--- a/src/modules/event-feed/assets/css/event-feed.css
+++ b/src/modules/event-feed/assets/css/event-feed.css
@@ -1,4 +1,4 @@
-wor.bpt-event-feed-widget {
+.bpt-event-feed-widget {
     height: 400px;
     overflow-y: scroll;
     overflow-x: hidden;
